data/derived/fa15/progs/unify/prog3588.ml.out
Characters 192-193:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type int list -> int * int -> int * int list
       but an expression was expected of type
         int list -> int * int -> int list
       Type int * int list is not compatible with type int list 
